<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- 1.1	将字符串资源“string.xml”中的app_name的值修改为“AndroidExam学号”。（5分） -->
    <string name="app_name">AndroidExamXX</string>
    <string name="AndroidExam">Android期末考试!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="title_activity_userlogin">UserloginActivity</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title">单词录入</string>
    <string name="wordshow">单词查看</string>
    <string name="menu_settings">Settings</string>
    <string name="btnok">添加</string>
    <string name="btnSave">保存</string>
    <string name="btnsearch">查看</string>
    <string name="btnupdate">更新</string>
    <string name="btndelete">删除</string>
    <string name="word">单词：</string>
    <string name="detail">解析：</string>
    <string name="btnprior">前一条</string>
    <string name="btnnext">后一条</string>
    <string name="editWord">编辑单词</string>
    <string name="updateword">单词重新 下载</string>
    <string name="str_text1">圆形</string>
    <string name="str_text2">正方形</string>
    <string name="str_text3">长方形</string>
    <string name="str_text4">椭圆形</string>
    <string name="str_text5">三角形</string>
    <string name="str_text6">梯形</string>

    <string name="oywh">奥运五环</string>
    <string name="gk">更快！</string>
    <string name="gg">更高！</string>
    <string name="gq">更强！</string>
</resources>