<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:textColor="@color/black_1" >

    <TableLayout
        android:id="@+id/tablelayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:collapseColumns="3"
        android:paddingLeft="35px"
        android:paddingRight="40px"
        android:paddingTop="40px"
        android:stretchColumns="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title"
            android:textStyle="normal" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/word" />

            <EditText
                android:id="@+id/word"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/detail" />

            <EditText
                android:id="@+id/detail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btninsert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnok" />

            <Button
                android:id="@+id/btnsearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnsearch" />

            
            <Button
                android:id="@+id/btnupdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnupdate" />

           
        </LinearLayout>
    </TableLayout>

</LinearLayout>